Chamber of Commerce v2.6 - Fixed CSS alignment

--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -77,15 +77,17 @@ p {
 
 /* ================= CONTAINER ================= */
 
-.container {
+div.container {
     display: flex;
     flex: 1;
     flex-direction: row;
     flex-wrap: nowrap;
     width: 100%;
-    max-width: 100%;
+
     margin: 0 auto;
     padding: 0;
+    max-width: 100vw;
+    width: 100%;
 
 }
 
@@ -117,12 +119,15 @@ div.nav-links-wrapper img {
     margin-top: 3px;
 }
 
-.active::after {
+.active {
 
-    content: '📌';
+    /* content: '📌'; */
     display: block;
-    margin-top: -20px;
-    margin-left: -83px;
+    color: #fff;
+    /* background-color: var(--highlight); */
+    text-decoration: underline;
+    /* margin-top: -20px;
+    margin-left: -83px; */
 
 }
 
@@ -177,18 +182,21 @@ div.hero img {
 
     padding: 0;
     /* margin: 0 auto; */
-    max-width: 100%;
+    max-width: 100vw;
+    width: 100%;
+
     margin-bottom: -4px;
 }
 
 
 /* ================= MAIN ================= */
 main {
+    align-content: center;
+    background-color: var(--base-color);
     display: flex;
     flex-direction: column;
+    flex: 1;
 
-    /* flex: 1; */
-    background-color: var(--base-color);
     padding: 0;
     margin: 10px auto;
     max-width: 100vw;
@@ -201,12 +209,14 @@ main>p {
     margin: 20px;
 }
 
-div.container {
+/* div.container {
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
     padding: 10px;
     max-width: 100vw;
 
-}
+} */
 
 div#businesses {
     align-items: center;
@@ -318,6 +328,7 @@ input[type="text"] {
     padding: 0;
     line-height: 1rem;
     width: 200px;
+
 }
 
 .left-sidebar>h2 {
@@ -359,7 +370,7 @@ aside {
     border: 1px solid var(--accent2-color);
     box-shadow: 0px 0px 2px RGBA(0, 0, 0, 0.5);
     margin: 0;
-    padding: 0;
+
     flex: 0 0 auto;
 
 
@@ -412,13 +423,13 @@ div.horizontal {
 }
 
 /* Responsive adjustments */
-@media screen and (max-width: 585px) {
+@media (min-width:444px) and (max-width: 680px) {
 
     #menu {
         font-size: 1.5rem;
         border: 0;
         position: absolute;
-        top: 2px;
+        top: 8px;
         right: 15px;
         color: var(--base-color);
         background: none;
@@ -459,21 +470,30 @@ div.horizontal {
         max-width: 100vw;
     }
 
+
     .business-labels {
+
         font-size: small;
+        /* margin-bottom: 50px;
+        padding-bottom: 50px; */
+        /* align-content: center;
+        justify-content: center;
+        align-items: center; */
     }
 
     div.container {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-content: flex-start;
+        align-content: center;
         align-items: center;
         margin: 0;
         padding: 5px;
         max-width: 100vw;
 
     }
+
+
 
     body {
         max-width: 100vw;
@@ -490,16 +510,16 @@ div.horizontal {
     aside.left-sidebar {
 
 
-        height: auto;
         border-radius: 10px;
         border: 1px solid #000;
         box-shadow: 0px 2px 8px #888;
-        margin: 10px auto;
-        max-width: 100vw;
+        height: auto;
+        margin: 0 auto;
+        max-width: 50vw;
     }
 
     aside.left-sidebar ul {
-        padding-bottom: 20px;
+        padding-bottom: 30px;
     }
 
     .nav-links-wrapper {
@@ -559,31 +579,54 @@ div.horizontal {
 
     .left-sidebar {
         width: 100%;
+
     }
 
     footer.bottom-details {
+
         padding: 20px;
+        max-width: 100vw;
+        width: 100%;
+    }
+
+    .bottom-details p {
+        font-family: var(--default-font);
+    }
+
+    #menu {
+        font-family: Arial, Helvetica, sans-serif;
     }
 }
 
-/* @media all and (max-width: 300px) {
+@media (min-width: 200px) and (max-width: 380px) {
+
     .container {
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-    }
-
-    main {
         display: flex;
-        align-content: center;
+        flex: 1;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 0;
+
     }
 
-    .nav-links-wrapper {
+    h1 {
+        font-size: 1.3rem;
+    }
+
+    .nav-links-wrapper,
+    .navlinks2 ul {
+        display: flex;
         flex-direction: column;
     }
 
-    .right-sidebar,
-    .left-sidebar {
-        width: 100%;
+    aside.left-sidebar {
+        display: none;
+        padding-bottom: 30px;
     }
-} */
+
+
+
+}
